# topology-driven-vectorization

./: CMakeLists.txt  clustering.cpp  clustering.hpp  extract_centerline.cpp  extract_centerline.hpp  extract_topology.cpp  extract_topology.hpp  main.cpp  move_pixels.cpp  move_pixels.hpp  pixel.cpp  pixel.hpp  point.hpp  writer.cpp  writer.hpp
